minor updates the hompage

--- a/src/input.css
+++ b/src/input.css
@@ -13,6 +13,7 @@
   --color-footer-teal: #013751;
   --color-footer-teal-darker: #022639;
   --color-video-play: #4D840A80;
+  --color-deep-green: #7DA83A;
 
   /* Define our primary font family */
   --font-Roboto: 'Roboto' , sans-serif;
