--- a/src/input.css
+++ b/src/input.css
@@ -8,6 +8,7 @@
   --color-brand-green-dark: #C7E091;
   --color-brand-green: #d8e5c8;
   --color-brand-green-light: #E6F3D6;
+  --color-green-light: #D0E5A3;
   --color-brand-text: #333333;
   --color-accent-yellow: #f59e0b;
   --color-footer-teal: #013751;
