Update About page department page

--- a/src/input.css
+++ b/src/input.css
@@ -15,6 +15,7 @@
   --color-footer-teal-darker: #022639;
   --color-video-play: #4D840A80;
   --color-deep-green: #7DA83A;
+  --color-brand-gray: #00000033;
 
   /* Define our primary font family */
   --font-Roboto: 'Roboto' , sans-serif;
