--- a/src/input.css
+++ b/src/input.css
@@ -4,6 +4,7 @@
 	/* Define our custom brand color palette */
 	--color-brand-teal: #033853;
 	--color-brand-green-dark: #c7e091;
+	--color-brand-green-darker: #7da83a;
 	--color-brand-green: #d8e5c8;
 	--color-brand-green-light: #e6f3d6;
 	--color-green-light: #d0e5a3;
@@ -142,6 +143,16 @@
 			@apply pl-4;
 		}
 	}
+
+	/* form */
+	.form-input {
+		@apply w-full bg-white rounded-lg py-3 px-4 focus:outline-none focus:ring-2 focus:ring-brand-green-dark border-transparent mb-4;
+	}
+	.form-submit {
+		@apply bg-brand-teal text-white font-bold py-3 px-10 rounded-full transition-colors;
+	}
+	/* end of form */
+
 	.footer-menu {
 		@apply space-y-3 text-sm;
 		li a {
@@ -151,30 +162,16 @@
 	.header-shrunk {
 		@apply shadow-lg;
 	}
-	/* --- Styles to control the header visibility states --- */
-	/* --- Final Shrinking Header CSS --- */
 
-	/* The top bar will have a smooth transition when it slides up */
 	#top-bar {
 		transition: transform 0.3s ease-in-out;
 	}
-
-	/* The main navigation bar will get a shadow smoothly */
 	#main-header .bg-brand-teal {
 		transition: box-shadow 0.3s ease-in-out;
 	}
-
-	/*
-   This is the magic class that JavaScript will add.
-   When the header has this class:
-  */
-
-	/* 1. The top bar slides up and out of view */
 	#main-header.header-scrolled #top-bar {
 		transform: translateY(-100%);
 	}
-
-	/* 2. The main navigation bar gets a shadow to show it's "lifted" */
 	#main-header.header-scrolled .bg-brand-teal {
 		@apply shadow-lg;
 	}
